--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +9,17 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
   </head>
   <body>
+    <h1>Barnes Hut近似を使ったグラフ描画をしよう</h1>
+    <ul>
+      <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+    </ul>
     <script src="src/sketch.js"></script>
-    <script src="src/bunes-hut.js"></script>
-    <script src="src/renderer.js"></script>
-    <script src="src/fdp.js"></script>
+    <script src="src/features/bunes-hut.js"></script>
+    <script src="src/features/renderer.js"></script>
+    <script src="src/features/fdp.js"></script>
   </body>
 </html>
