--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <h1>Barnes Hut近似を使ったグラフ描画をしよう</h1>
     <ul>
+      <li><a href="src/pages/fdp/index.html">FDP</a></li>
       <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
-      <li><a href=""></a></li>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
