--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <h1>Barnes Hut近似を使ったグラフ描画をしよう</h1>
     <ul>
       <li><a href="src/pages/fdp/index.html">FDP</a></li>
-      <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
+      <ul>
+        <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
+        <li><a href="src/pages/exercise/barnes-hut/index.html">演習</a></li>
+      </ul>
+
       <li><a href=""></a></li>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
     <script src="src/sketch.js"></script>
-    <script src="src/features/bunes-hut.js"></script>
+    <script src="src/features/answer/bunes-hut.js"></script>
     <script src="src/features/renderer.js"></script>
-    <script src="src/features/fdp.js"></script>
+    <script src="src/features/answer/fdp_barnes-hut.js"></script>
   </body>
 </html>
