--- a/src/pages/exercise/barnes-hut/index.html
+++ b/src/pages/exercise/barnes-hut/index.html
@@ -6,13 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Barnes Hut木</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
-    <script src="/src/features/answer/bunes-hut.js"></script>
+    <script src="/src/features/exercise/bunes-hut.js"></script>
   </head>
 
   <body>
     <script src="./sketch.js"></script>
-    <h1>Barnes Hut木</h1>
-    <p>test</p>
+    <h1>Barnes Hut木 演習</h1>
+    <p>addとupdateGravityPointを実装してください</p>
+    <h2>実行結果をこれと一致させたい</h2>
+    <iframe
+      src="/src/pages/barnes-hut/index.html"
+      width="100%"
+      height="400"
+    ></iframe>
     <!-- <script type="module" src="/src/features/bunes-hut.js"></script>
     <script type="module" src="/src/features/renderer.js"></script>
     <script type="module" src="/src/features/fdp.js"></script> -->
