--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
         <li><a href="src/pages/exercise/barnes-hut/index.html">演習</a></li>
       </ul>
+      <ul>
+        <li><a href="src/pages/fdp/index.html">FDP+Barnes Hut木</a></li>
+        <li><a href="src/pages/exercise/fdp/index.html">演習</a></li>
+      </ul>
 
       <li><a href=""></a></li>
       <li><a href=""></a></li>
