--- a/src/pages/fdp/index.html
+++ b/src/pages/fdp/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FDP</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
-    <script src="/src/features/bunes-hut.js"></script>
+    <script src="/src/features/answer/bunes-hut.js"></script>
     <script src="/src/features/renderer.js"></script>
     <script src="/src/features/fdp.js"></script>
   </head>
