--- a/src/pages/barnes-hut/index.html
+++ b/src/pages/barnes-hut/index.html
@@ -7,14 +7,11 @@
     <title>Barnes Hut木</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
     <script src="/src/features/answer/bunes-hut.js"></script>
+    <script src="/src/features/renderer.js"></script>
   </head>
 
   <body>
     <script src="./sketch.js"></script>
     <h1>Barnes Hut木</h1>
-    <p>test</p>
-    <!-- <script type="module" src="/src/features/bunes-hut.js"></script>
-    <script type="module" src="/src/features/renderer.js"></script>
-    <script type="module" src="/src/features/fdp.js"></script> -->
   </body>
 </html>
