--- a/src/pages/exercise/barnes-hut/index.html
+++ b/src/pages/exercise/barnes-hut/index.html
@@ -13,7 +13,8 @@
     <script src="./sketch.js"></script>
     <h1>Barnes Hut木 演習</h1>
     <p>addとupdateGravityPointを実装してください</p>
-    <h2>実行結果をこれと一致させたい</h2>
+    <h2>回答</h2>
+    <p>補足：ランダムな座標なので細かいとこ気にしなくていいよ</p>
     <iframe
       src="/src/pages/barnes-hut/index.html"
       width="100%"
