--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <li><a href="src/pages/exercise/barnes-hut/index.html">演習</a></li>
       </ul>
       <ul>
-        <li><a href="src/pages/fdp/index.html">FDP+Barnes Hut木</a></li>
-        <li><a href="src/pages/exercise/fdp/index.html">演習</a></li>
+        <li>
+          <a href="src/pages/fdp_barnes-hut/index.html">FDP+Barnes Hut木</a>
+        </li>
+        <li><a href="src/pages/exercise/fdp_barnes-hut/index.html">演習</a></li>
       </ul>
     </ul>
     <script src="src/sketch.js"></script>
