--- a/src/pages/exercise/fdp_barnes-hut/index.html
+++ b/src/pages/exercise/fdp_barnes-hut/index.html
@@ -7,18 +7,17 @@
     <title>FDP</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
     <script src="/src/features/exercise/fdp_barnes-hut.js"></script>
-    <script
-      src="/src/features/exercise/bunes-hut.js"
-      ></script>
-      src="/src/features/renderer.js"
-    ></script>
+    <script src="/src/features/exercise/bunes-hut.js"></script>
   </head>
 
   <body>
-    <h1>FDP with Barnes-Hut 演習</h1>
     <p>斥力計算部分をBarnes-Hut木を使って実装してください</p>
     <h2>解答</h2>
-    <iframe src="/src/pages/fdp/index.html" width="100%" height="400"></iframe>
+    <iframe
+      src="/src/pages/fdp_barnes-hut/index.html"
+      width="100%"
+      height="400"
+    ></iframe>
     <script src="./sketch.js"></script>
   </body>
 </html>
