ちょっと親切に

--- a/src/pages/exercise/barnes-hut/index.html
+++ b/src/pages/exercise/barnes-hut/index.html
@@ -6,22 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Barnes Hut木</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
-    <script src="/src/features/exercise/bunes-hut.js"></script>
+    <script src="/src/features/exercise/barnes-hut.js"></script>
+    <script src="/src/features/renderer.js"></script>
   </head>
 
   <body>
     <script src="./sketch.js"></script>
     <h1>Barnes Hut木 演習</h1>
     <p>addとupdateGravityPointを実装してください</p>
-    <h2>回答</h2>
+    <p>addは<code>src/features/exercise/barnes-hut.js</code>の105行目</p>
+    <p>
+      updateGravityPointは<code>src/features/exercise/barnes-hut.js</code>の172行目
+    </p>
+    <h2>想定挙動</h2>
     <p>補足：ランダムな座標なので細かいとこ気にしなくていいよ</p>
     <iframe
       src="/src/pages/barnes-hut/index.html"
       width="100%"
       height="400"
     ></iframe>
-    <!-- <script type="module" src="/src/features/bunes-hut.js"></script>
-    <script type="module" src="/src/features/renderer.js"></script>
-    <script type="module" src="/src/features/fdp.js"></script> -->
+    <h2>描画結果</h2>
   </body>
 </html>
