--- a/src/pages/exercise/fdp_barnes-hut/index.html
+++ b/src/pages/exercise/fdp_barnes-hut/index.html
@@ -7,17 +7,19 @@
     <title>FDP</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
     <script src="/src/features/exercise/fdp_barnes-hut.js"></script>
-    <script src="/src/features/exercise/bunes-hut.js"></script>
+    <script src="/src/features/exercise/barnes-hut.js"></script>
   </head>
 
   <body>
-    <p>斥力計算部分をBarnes-Hut木を使って実装してください</p>
-    <h2>解答</h2>
+    <h1>斥力計算部分をBarnes-Hut木を使って実装してください</h1>
+    <p><code>src/features/exercise/barnes-hut.js</code>の99行目</p>
+    <h2>想定挙動</h2>
     <iframe
       src="/src/pages/fdp_barnes-hut/index.html"
       width="100%"
       height="400"
     ></iframe>
+    <h2>描画結果</h2>
     <script src="./sketch.js"></script>
   </body>
 </html>
