ナビを全部に

--- a/src/pages/fdp_barnes-hut/index.html
+++ b/src/pages/fdp_barnes-hut/index.html
@@ -12,6 +12,19 @@
   </head>
 
   <body>
+    <ul>
+      <li><a href="src/pages/fdp/index.html">FDP</a></li>
+      <ul>
+        <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
+        <li><a href="src/pages/exercise/barnes-hut/index.html">演習</a></li>
+      </ul>
+      <ul>
+        <li>
+          <a href="src/pages/fdp_barnes-hut/index.html">FDP+Barnes Hut木</a>
+        </li>
+        <li><a href="src/pages/exercise/fdp_barnes-hut/index.html">演習</a></li>
+      </ul>
+    </ul>
     <h1>FDP + barnes-hut</h1>
     <script src="./sketch.js"></script>
   </body>
