--- a/src/pages/exercise/fdp_barnes-hut/index.html
+++ b/src/pages/exercise/fdp_barnes-hut/index.html
@@ -11,6 +11,19 @@
   </head>
 
   <body>
+    <ul>
+      <li><a href="src/pages/fdp/index.html">FDP</a></li>
+      <ul>
+        <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
+        <li><a href="src/pages/exercise/barnes-hut/index.html">演習</a></li>
+      </ul>
+      <ul>
+        <li>
+          <a href="src/pages/fdp_barnes-hut/index.html">FDP+Barnes Hut木</a>
+        </li>
+        <li><a href="src/pages/exercise/fdp_barnes-hut/index.html">演習</a></li>
+      </ul>
+    </ul>
     <h1>斥力計算部分をBarnes-Hut木を使って実装してください</h1>
     <p><code>src/features/exercise/barnes-hut.js</code>の99行目</p>
     <h2>想定挙動</h2>
