--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
   <body>
     <h1>Barnes Hut近似を使ったグラフ描画をしよう</h1>
     <ul>
-      <li><a href="src/pages/fdp/index.html">FDP</a></li>
+      <li><a href="/src/pages/fdp/index.html">FDP</a></li>
       <ul>
-        <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
-        <li><a href="src/pages/exercise/barnes-hut/index.html">演習</a></li>
+        <li><a href="/src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
+        <li><a href="/src/pages/exercise/barnes-hut/index.html">演習</a></li>
       </ul>
       <ul>
         <li>
-          <a href="src/pages/fdp_barnes-hut/index.html">FDP+Barnes Hut木</a>
+          <a href="/src/pages/fdp_barnes-hut/index.html">FDP+Barnes Hut木</a>
         </li>
-        <li><a href="src/pages/exercise/fdp_barnes-hut/index.html">演習</a></li>
+        <li>
+          <a href="/src/pages/exercise/fdp_barnes-hut/index.html">演習</a>
+        </li>
       </ul>
     </ul>
     <script src="src/sketch.js"></script>
