--- a/src/pages/exercise/fdp_barnes-hut/index.html
+++ b/src/pages/exercise/fdp_barnes-hut/index.html
@@ -12,16 +12,18 @@
 
   <body>
     <ul>
-      <li><a href="src/pages/fdp/index.html">FDP</a></li>
+      <li><a href="/src/pages/fdp/index.html">FDP</a></li>
       <ul>
-        <li><a href="src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
-        <li><a href="src/pages/exercise/barnes-hut/index.html">演習</a></li>
+        <li><a href="/src/pages/barnes-hut/index.html">Barnes Hut木</a></li>
+        <li><a href="/src/pages/exercise/barnes-hut/index.html">演習</a></li>
       </ul>
       <ul>
         <li>
-          <a href="src/pages/fdp_barnes-hut/index.html">FDP+Barnes Hut木</a>
+          <a href="/src/pages/fdp_barnes-hut/index.html">FDP+Barnes Hut木</a>
         </li>
-        <li><a href="src/pages/exercise/fdp_barnes-hut/index.html">演習</a></li>
+        <li>
+          <a href="/src/pages/exercise/fdp_barnes-hut/index.html">演習</a>
+        </li>
       </ul>
     </ul>
     <h1>斥力計算部分をBarnes-Hut木を使って実装してください</h1>
